tests/reference/asr-program_variable-066cc64.stderr
semantic error: Variable 'foo' is not declared
 --> tests/errors/program_variable.f90:3:7
  |
3 | bar = foo
  |       ^^^ 'foo' is undeclared
